--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "css:copy": "shx cp -r dist/css/serenity.min.css docs/.vuepress/public/css && shx cp -r node_modules/prism-themes/themes/prism-a11y-dark.css docs/.vuepress/public/css",
     "js": "npm-run-all --sequential js:build js:copy",
     "js:build": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
-    "js:copy": "shx cp -r src/js/serenity/*.vue docs/.vuepress/components/Serenity/",
+    "js:copy": "shx cp -r src/js/serenity/* docs/.vuepress/components/Serenity/",
     "images": "npm-run-all --sequential images:copy",
     "images:copy": "shx cp -r src/images/ dist/ && shx cp -r dist/images/ docs/.vuepress/public/",
     "copy": "npm-run-all --parallel css:copy images:copy",
     "watch": "npm-run-all --parallel watch:*",
     "watch:css": "nodemon --watch src/scss/ --ext scss --exec \"npm run css\"",
-    "watch:js": "nodemon --watch src/js --ext vue --exec \"npm run js\"",
+    "watch:js": "nodemon --watch src/js --ext vue,js --exec \"npm run js\"",
     "watch:images": "nodemon --watch src/images --exec \"npm run images\"",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
@@ -72,6 +72,7 @@
   ],
   "dependencies": {
     "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.1.3"
   }
 }
